# usta

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
src/usta/: crew.py  main.py
src/usta/config/: agents.yaml  tasks.yaml
src/usta/models/: tournament_summary.py
src/usta/tools/: code_runners.py  custom_tool.py
src/usta/tournaments/: utils.py
src/usta/tournaments/scripts/: generate_html.py  summarize_data.py
