[project]
name = "usta"
version = "0.1.0"
description = "A project for performing tasks related to USTA league and tournament play"
authors = [
    {name = "Maegen Demko",email = "mvd326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "data-retrieval @ git+ssh://git@github.com/mvdemko/data-retrieval.git",
    "anthropic (>=0.58.2,<0.59.0)",
    "geopy (>=2.4.1,<3.0.0)",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
